@@ -1,3 +1,7 @@
+2007-11-30  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* lto-tree-flags.def (RESULT_DECL): Add gimple_reg_flag.
+
 2007-11-29  Kenneth Zadeck <zadeck@naturalbridge.com>
 
 	* lto-function-out.c (output_expr_operand): Fix STRING_CST to
